[gd_scene load_steps=4 format=3 uid="uid://ddrh1ug3vx7bi"]

[ext_resource type="Script" path="res://scenes/HUD.gd" id="1_y6bgj"]
[ext_resource type="FontFile" uid="uid://bc3a5k4wlhe06" path="res://assets/Kenney Bold.ttf" id="2_6dhv3"]

[sub_resource type="LabelSettings" id="LabelSettings_u2lhx"]
font = ExtResource("2_6dhv3")
font_size = 48
shadow_size = 16
shadow_color = Color(0, 0, 0, 0.313726)
shadow_offset = Vector2(5, 5)

[node name="HUD" type="Node"]
script = ExtResource("1_y6bgj")

[node name="Message" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "COIN DASH!"
label_settings = SubResource("LabelSettings_u2lhx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="Time" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_u2lhx")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Score" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_u2lhx")
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -213.0
offset_right = 148.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_6dhv3")
theme_override_font_sizes/font_size = 48
text = "START"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
